# nastavnik_course_gen

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_GUIDE.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  test_profile.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_widen_step_name_column.py  003_add_batch_id.py  004_manual_mode.py
backend/src/: main.py  test_hook_validation.py
backend/src/api/: health.py  logs.py  manual.py  profiles.py  tracks.py
backend/src/core/: config.py  database.py
backend/src/models/: __init__.py  generation_log.py  manual_session.py  manual_step_run.py  personalized_track.py  processor_config.py  prompt_version.py  qa_report.py  student_profile.py
backend/src/schemas/: manual.py  qa_report.py  student_profile.py  track.py
backend/src/services/: evaluation_service.py  field_usage_service.py  manual_service.py  profile_service.py  prompt_service.py  track_service.py
backend/tests/e2e/: test_phase3_e2e.py
backend/tests/integration/: test_profile_form_api.py
backend/tests/unit/: test_track_service.py
ml/: Dockerfile  pyproject.toml
ml/processors/examples/: check_competency_count.py  validate_input_schema.py
ml/scripts/: IMPLEMENTATION_REPORT.md  MOCK_MODE.md  QUICKSTART.md  README.md  demo_mock.sh  generate_new_track.py  run_pipeline_mock.py  test_mock_all_steps.py  validate_pipeline.py
ml/scripts/validators/: __init__.py  base.py  reference_validator.py  report_generator.py  schema_validator.py
ml/src/: main.py
ml/src/api/: health.py  manual.py  pipeline.py  steps.py
ml/src/core/: config.py
ml/src/pipeline/: b1_validate.py  b2_competencies.py  b3_ksa_matrix.py  b4_learning_units.py  b5_hierarchy.py  b6_problem_formulations.py  b7_schedule.py  b8_validation.py
ml/src/schemas/: cdv.py  (+4 more)
ml/tests/: test_mock_llm_client.py
(+155 files in other folders)
